--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Auttapon siriwaramas",
   "license": "ISC",
   "dependencies": {
-    "actions-on-google": "^2.0.0"
+    "actions-on-google": "^2.0.0",
+    "express": "^4.14.0"
   },
   "start": "node server.js"
   
