--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node",
   "version": "0.0.1",
   "description": "fullfillment experiment for dialogflow agent",
-  "main": "server.js",
+  "main": "server1.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
