--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node",
   "version": "0.0.1",
   "description": "fullfillment experiment for dialogflow agent",
-  "main": "server1.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,7 +12,7 @@
     "actions-on-google": "^2.0.0",
     "express": "^4.14.0"
   },
-  "start": "node server1.js"
+  "start": "node server.js"
   
   
 }
