--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node",
   "version": "0.0.1",
   "description": "fullfillment experiment for dialogflow agent",
-  "main": "server11.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,7 +13,7 @@
     "express": "^4.14.0",
     "axios":"^0.18.0"
   },
-    "start": "pm2 start server.js"
+    "start": "pm2 start pm2-dev.json"
   
   
 }
