--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "actions-on-google": "^2.0.0",
     "express": "^4.14.0",
-    "axios":"^0.18.0"
+    "axios":"^0.18.0",
+    "request":"^2.88.0"
   },
     "start": "pm2 start pm2-dev.json"
   
